# quant-research

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
notebooks/: Untitled.ipynb  ca_governor_primary_county_level_live.csv  ca_governor_primary_live.csv  project.ipynb
src/quant_research.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quant_research/backtesting/: probability_backtester.py
src/quant_research/data/: data_aligner.py  data_downloader.py  data_processor.py  label_builder.py
src/quant_research/evaluation/: threshold_sweep.py
src/quant_research/features/: feature_builder.py  volume_microstructure_features.py
src/quant_research/models/: neural_models.py  sequence_dataset.py  train_sequence_walk_forward.py  train_transformer_locked_test.py  train_transformer_random_days.py  xgboost_walk_forward.py
src/quant_research/regime/: hmm_feature_builder.py
src/quant_research/utils/: paths.py
