[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research"
version = "0.1.0"
description = "Quant research framework comparing XGBoost, transformers, HMM regimes, and reinforcement learning."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
